--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html >
   <head>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Sarpanch:400,600' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href='css/sarpanch.css' rel='stylesheet' type='text/css'>
+<link href='css/sharetech.css' rel='stylesheet' type='text/css'>
 </style>
     <meta charset="UTF-8">
     <title>..:: {{site.title}} ::..</title>
