--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Sarpanch">
   <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet" type="text/css">
 </style>
 <meta charset="UTF-8">
