--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@
   margin-left: 15px;
   padding-bottom: 25px;
   font-size: 50px;
-  font-family: 'Sarpanch', sans-serif;
+  font-family: 'Sarpanch';
 }
 
 .terminal {
