--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Sarpanch">
-  <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet" type="text/css">
-</style>
 <meta charset="UTF-8">
 <title>..:: {{site.title}} ::..</title>
 <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link href="http://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet" type="text/css">
 </head>
 <p class="rss-subscribe"><a href="{{ "/feed.xml" | prepend: site.baseurl }}">[ RSS ]</a></p>
 <body style="background-color:black;">
