--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,3 @@
-/* devanagari */
-@font-face {
-  font-family: 'Sarpanch';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Sarpanch'), local('Sarpanch-Regular'), url(http://fonts.gstatic.com/s/sarpanch/v1/a5nncxfcOM-AHNYO3JsvjhTbgVql8nDJpwnrE27mub0.woff2) format('woff2');
-  unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Sarpanch';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Sarpanch'), local('Sarpanch-Regular'), url(http://fonts.gstatic.com/s/sarpanch/v1/97u5riIkSG0o5eFDW7XlcBTbgVql8nDJpwnrE27mub0.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-  font-family: 'Sarpanch';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Sarpanch'), local('Sarpanch-Regular'), url(http://fonts.gstatic.com/s/sarpanch/v1/9r86uob7Kavm_ZkBXcnD4fesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-}
-
 * {
   margin: 0;
   padding: 10;
@@ -33,14 +8,14 @@
   margin-left: 15px;
   padding-bottom: 25px;
   font-size: 50px;
-  font-family: 'Sarpanch';
+  font-family: 'Sarpanch', 'Lucida Console';
 }
 
 .terminal {
   position: absolute;
   width: 90%;
   height: 100%;
-  font-family: 'Share Tech', sans-serif;
+  font-family: 'Share Tech', 'Lucida Console';
 /*  color: #00fb72; */
   color: #fff; 
 }
