--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="http://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 </head>
 <p class="rss-subscribe"><a href="{{ "/feed.xml" | prepend: site.baseurl }}">[ RSS ]</a></p>
 <body style="background-color:black;">
   <div class="buzz_wrapper">
     <div class="text">
       <center><span><img src="img/LOGOBRANCO.png"></span></center>
-      <center><span class="titulo">_UnkL4b_</span></center>
+      <center><span>_UnkL4b_<span></center>
     </div>
     <div class="scanline"></div>
   </div>
