--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,7 @@
 <title>..:: {{site.title}} ::..</title>
 <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet" type="text/css">
-  <link href="http://fonts.googleapis.com/css?family=Share+Tech" rel="stylesheet" type="text/css">
+<link href='https://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 </head>
 <p class="rss-subscribe"><a href="{{ "/feed.xml" | prepend: site.baseurl }}">[ RSS ]</a></p>
