--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
 <link href='https://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Sarpanch' rel='stylesheet' type='text/css'>
 </head>
 <p class="rss-subscribe"><a href="{{ "/feed.xml" | prepend: site.baseurl }}">[ RSS ]</a></p>
 <body style="background-color:black;">
