--- a/_layouts/contato.html
+++ b/_layouts/contato.html
@@ -2,39 +2,31 @@
 <html >
 <head>
 <meta charset="UTF-8">
-<title>..:: UnkL4b ::..</title>
+<title>..:: {{site.title}} ::..</title>
 <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
 <link href='https://fonts.googleapis.com/css?family=Share+Tech' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Sarpanch' rel='stylesheet' type='text/css'>
 </head>
-<p class="terminal">[ <a href="/feed.xml">RSS</a>]  
-[ <a href="/contato.html">C0nT4t0s</a> ]</p>
+<p class="terminal">[ <a href="/">H0m3</a> ]</p>
 <body style="background-color:black;">
   <div class="buzz_wrapper">
     <div class="text">
-      <center><span><img src="img/LOGOBRANCO.png"></span></center>
+      <center><span><a href="/"><img src="img/LOGOBRANCO.png"></span></center></a>
       <center><span>_UnkL4b_<span></center>
     </div>
     <div class="scanline"></div>
   </div>
   <div class="terminal row">
     <span terminal=1 class="terminal-line">
-      <div class="col-md-6">
-        [ T00ls ]
+	      <div class="col-md-12 text-center">
+        [ C0nt4t0s ]
         <br/>
         <br/>
-        ~> <a href="https://github.com/UnkL4b/GitMiner">GitMiner</a> - Advanced search tool and automation in Github.
-        <br/>
-        ~> <a href="https://github.com/danilovazb/sawef">Sawef</a> - Send Attack Web Forms
-      </div>
-      <div class="col-md-6">
-        [ P0sts ]
-        <br/>
-        <br/>
-        <br/>
-        [ <a href="postagens.html">M41s p0st4g3ns</a> ]
+3-M41L: unkl4b[*noSpam*]protonmail[*dot*]com<br>
+g1thub: https://github.com/unkl4b<br>
+tw1tt3r: @danilo_vaz_
       </div>
 
     </span>
