--- a/src/styl/_header.styl
+++ b/src/styl/_header.styl
@@ -37,9 +37,9 @@ $bg
 				margin 0
 				font-weight 300
 				font-size rem(17px)
-				border-bottom 1px solid rgb(135, 116, 169)
+				border-bottom 1px solid rgb(153, 250, 238)
 				&:hover
-					background rgba(135,116,169,0.42)
+					background rgba(124, 221, 210,0.42)
 	h1,h2
 		color: sec
 		text-align center
