--- a/src/styl/_variables.styl
+++ b/src/styl/_variables.styl
@@ -1,12 +1,12 @@
 // COLORS
-main = #5d4d7a;
-mainHover = rgba(135, 116, 169, 0.42);
+main = #000;
+mainHover = rgba(124, 221, 210, 0.42);
 hover = darken(main, 50%)
-mainLight = #AB67AB
+mainLight = #3d3a3d
 sec  = #FFFFFF
 lightGray = #F2F2F2
 texts = #333333
-colorcode = #615576
+colorcode = #7CDDD2
 blackBase =  #2f2f33
 neotree = #2f2f33
 // Resolution
