--- a/_includes/tree-posts.html
+++ b/_includes/tree-posts.html
@@ -1,17 +1,21 @@
-<div class="tree-posts">
+<header class="header-site" role="banner">
+    <div class="tree-posts">
 
-    <h3>*Posts*</h3>
+        <h1>
+            <span class="site-title">[{{site.username}}]</span>
+        </h1>
 
-    {% for post in site.posts %}
+        <ul class="recent">
+            <p>Posts:</p>
+             {% for post in site.posts %}
+                <li>
+                    <a title="Will take a my recent post" href="{{ post.url | prepend: site.baseurl }}">
+                        <h2 class="post-title" itemprop="name">{{ post.title }}</h2>
+                    </a>
+                </li>
+              {% endfor %}
+        </ul>
 
-    <article role="article" class="post-item" itemscope="itemscope" itemtype="http://schema.org/BlogPosting" itemprop="blogPost">
-        <div class="content">
-            <a title="Open the post" href="{{ post.url | prepend: site.baseurl }}">
-                <h2 class="post-title" itemprop="name">{{ post.title | replace: ' ','-'}}.md</h2>
-            </a>
-        </div>
-    </article>
-
-    {% endfor %}
-
-</div>
+    </div>
+    {% include menu-search.html %}
+</header>
